Improves fdo#41407: Make gs a higher priority than convert for EPS rendering.

This speeds up EPS loading on systems where convert is configured to execute
gs for conversion instead of using libgs. This seems to be how convert is compiled
on most linux distos.

Change-Id: Ibfc95bff11076d286b6ba210d2db2129ac0bb45b